[tool.poetry]
name = "dataloader"
version = "0.0.1"
description = "Dataloader for PyTorch"
authors = ["\"Frank Kelly\", \"Zabil CM\""]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9.0, <3.11"
torch = "^1.10.0"
torchvision = "^0.11.1"
tabulate = "^0.8.9"
scipy = "^1.7.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
