[tool.poetry]
name = "dataloader_fetcher"
version = "0.0.1"
description = "Dataloader for PyTorch"
authors = ["\"Frank Kelly\", \"Zabil CM\""]
maintainers= ["Frank Kelly", "Zabil CM"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/taimatsudev/dataloader/"
documentation = ""
keywords = [
    "PyTorch",
    "scikit-learn",
    "torchvision",
    "Iris",
    "MNIST"
]

[tool.poetry.dependencies]
python = ">=3.9.0, <3.11"
torch = "^1.10.0"
torchvision = "^0.11.1"
tabulate = "^0.8.9"
scipy = "^1.7.0"
scikit-learn = "^1.0.2"
setuptools = "^63.2.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/taimatsudev/dataloader/issues"
